commit of gestionReview

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,13 +24,27 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/E-badel.jar
+dist.jar=${dist.dir}/Ebadel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.activation-1.1.jar=C:\\Users\\messaoudi\\Downloads\\activation-1.1.jar
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\messaoudi\\Downloads\\controlsfx-8.40.11.jar
+file.reference.fontawesomefx-8.5.jar=C:\\Users\\messaoudi\\Downloads\\fontawesomefx-8.5.jar
+file.reference.javax.mail-1.6.1.jar=C:\\Users\\messaoudi\\Downloads\\javax.mail-1.6.1.jar
+file.reference.jfoenix-8.0.8.jar=C:\\Users\\messaoudi\\Downloads\\jfoenix-8.0.8.jar
+file.reference.jfxtras-all-10.0-r1.jar=C:\\Users\\messaoudi\\Downloads\\jfxtras-all-10.0-r1.jar
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\messaoudi\\Downloads\\mysql-connector-j-8.0.32\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar}:\
+    ${file.reference.javax.mail-1.6.1.jar}:\
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.fontawesomefx-8.5.jar}:\
+    ${file.reference.jfxtras-all-10.0-r1.jar}:\
+    ${file.reference.activation-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +69,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ebade1.Ebade1
+main.class=Ebadel.tests.ReviewUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
